--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#000000"
+    android:id="@+id/ll_root"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
